ecmascript/parser/tests/test262-error-references/fail/8373e2a6865dc08c.js.stderr
error: Unexpected token Some(Comma). Expected one of identifier, string literal, numeric literal or [ for the computed key
 --> $DIR/tests/test262-parser/fail/8373e2a6865dc08c.js:1:15
  |
1 | class A {a(){},b(){}}
  |               ^

